tests/baselines/reference/shorthand-property-es6-es6.errors.txt
test.ts(1,19): error TS2792: Cannot find module './foo'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


==== test.ts (1 errors) ====
    import {foo} from './foo';
                      ~~~~~~~
!!! error TS2792: Cannot find module './foo'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const baz = 42;
    const bar = { foo, baz };
    